Немецкий начальная школа 2

--- a/шаблон — направления-начальная школа - немецкий-язык.html
+++ b/шаблон — направления-начальная школа - немецкий-язык.html
@@ -259,14 +259,14 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 329.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
         </div>
         <div class="container">
             <div class="container-item">
-                <h3>Хотите узнать о русском языке больше?</h3>
+                <h3>Хотите узнать больше?</h3>
                 <h4>Оставьте заявку на бесплатный урок</h4>
                 <form action="" class="uk-grid-small banner-trend-form napravlenia_nach" uk-grid>
                     <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
@@ -315,16 +315,22 @@
                             и с ним у детей не редко возникают проблемы, напрямую влияющие даже на годовые оценки <br>
                             Почему так?
                         </div>
-                        
+                        <div uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
+                            <ul class="napravlenia_spisok" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
+                                <li>пробелы в знаниях из-за болезни и невнимательности</li>
+                                <li>путаница с падежами и временами</li>
+                                <li>скучно заниматься, нет сосредоточенности на уроке</li>
+                                <li>дети смешивают грамматику английского, немецкого и русского языков</li>
+                                <li>списывание домашних заданий из интернета</li>
+                                <li>отсутствие мотивации, проблемы с языковым барьером</li>
+                            </ul>
+                            <div class="uk-padding">
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 330.png" alt=""
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
+                            </div>
+                        </div>
 
-                        <ul class="napravlenia_spisok" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
-                            <li>пробелы в знаниях из-за болезни и невнимательности</li>
-                            <li>путаница с падежами и временами</li>
-                            <li>скучно заниматься, нет сосредоточенности на уроке</li>
-                            <li>дети смешивают грамматику английского, немецкого и русского</li>
-                            <li>списывание домашних заданий из интернета</li>
-                            <li>отсутствие мотивации, проблемы с языковым барьером</li>
-                        </ul>
+
                     </div>
                 </section>
                 <section class="two-section-dop">
@@ -348,7 +354,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 331.png" alt="">
                         </div>
                         <div class="efficiency efficiency-malisham efficiency_rus-nach">
                             <ul>
@@ -360,6 +366,7 @@
                                 <li>более 1000 новых слов</li>
                                 <li>улучшение когнитивных навыков</li>
                             </ul>
+
                         </div>
                     </div>
                 </section>
@@ -371,7 +378,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-margin-large-bottom uk-margin-large-top" uk-grid>
                 <div class="uk-width-expand@m">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 332.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -408,7 +415,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 333.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -418,7 +425,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-margin-large-bottom uk-margin-large-top" uk-grid>
                 <div class="uk-width-expand@m">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 334.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -428,7 +435,10 @@
                             Словотворчество без границ
                         </div>
                         <div class=" uk-padding napravlenia_textblock ">
-                            Еще одна особенность немецкого языка, так полюбившаяся детям - сложные слова столь длинные, что не всегда влезают в одну строчку и для непросвещенных кажутся какой-то непонятной кашей. Можно часами сидеть над тетрадкой, забавы ради составляя большие, словно лоскутные одеяла, сочетания, не чувствуя ни толики скуки!
+                            Еще одна особенность немецкого языка, так полюбившаяся детям - сложные слова столь длинные,
+                            что не всегда влезают в одну строчку и для непросвещенных кажутся какой-то непонятной кашей.
+                            Можно часами сидеть над тетрадкой, забавы ради составляя большие, словно лоскутные одеяла,
+                            сочетания, не чувствуя ни толики скуки!
                         </div>
                     </div>
                 </div>
