французский средняя школа 2

--- a/шаблон — направления-средняя-школа-французский-язык.html
+++ b/шаблон — направления-средняя-школа-французский-язык.html
@@ -254,7 +254,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 335.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -269,7 +269,7 @@
                 <div alt="" class="five-section-img4 icons-radius icons-style" src=" ">
                 </div>
                 <div class="two-section-img7 icons-block icons-style">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/ .svg">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/велосипед.svg">
                 </div>
 
 
@@ -333,14 +333,14 @@
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/ .svg ">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/круасан.svg ">
                     </div>
 
                     <div alt="" class="nine-section-img3 icons-radius icons-style" src="">
                     </div>
 
                     <div class="nine-section-img6 icons-block icons-style">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/ .svg ">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/фонарь.svg ">
                     </div>
                 </section>
                 <section class="container-item">
@@ -378,7 +378,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 336.png" alt="">
                         </div>
                     </div>
                 </section>
@@ -407,7 +407,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom uk-margin-large-top" uk-grid>
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 337.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -443,7 +443,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 338.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -453,7 +453,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 339.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -489,7 +489,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 340.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -499,7 +499,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 341.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
