Французский начальная школа 3

--- a/шаблон — направления-начальная школа - французский-язык.html
+++ b/шаблон — направления-начальная школа - французский-язык.html
@@ -449,7 +449,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 347.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack"
@@ -457,7 +457,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 348.png" alt="">
                         </div>
                         <div class="efficiency efficiency-malisham efficiency_rus-nach">
                             <ul>
@@ -482,7 +482,7 @@
                     <div class="uk-text-center uk-grid" uk-grid="">
                         <div class="uk-width-1-2@m uk-first-column">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 349.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom ">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -493,7 +493,7 @@
                         </div>
                         <div class="uk-width-1-2@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 350.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom ">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -504,7 +504,7 @@
                         </div>
                         <div class="uk-width-1-2@m uk-first-column">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 352.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom ">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -516,7 +516,7 @@
                         </div>
                         <div class="uk-width-1-2@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 351.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom ">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -528,7 +528,7 @@
                         </div>
                         <div class="uk-width-1-2@m uk-first-column">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 356.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom ">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -541,7 +541,7 @@
                         </div>
                         <div class="uk-width-1-2@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 355.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom ">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -554,7 +554,7 @@
                         </div>
                         <div class="uk-width-1-2@m uk-first-column">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 354.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom ">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -567,7 +567,7 @@
                         </div>
                         <div class="uk-width-1-2@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 353.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom ">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
