--- a/шаблон — страница направления-подготовка-к-школе.html
+++ b/шаблон — страница направления-подготовка-к-школе.html
@@ -367,6 +367,34 @@
                     </section>
                 </div>
             </div>
+ <!--Блок с меню раздела-->
+ <div class="uk-margin-large-top uk-margin-large-bottom">
+    <div class="container">
+        <section class="container-item">
+            <h3 class="center title-trend-block" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
+                Занятия по направлениям</h3>
+                <ul class="section-menu dosk">
+                    <li>
+                        <a href="">Логопед</a>
+                    </li>
+                    <li>
+                        <a href="">Дефектолог</a>
+                    </li>
+                    <li>
+                        <a href="">Психолог</a>
+                    </li>
+                    <li>
+                        <a href="">Подготовка к школе</a>
+                    </li>
+                    <li>
+                        <a href="">Английский язык</a>
+                    </li>
+                </ul>
+        </section>
+    </div>
+</div>
+
+
             <div class="">
                 <div class="container">
 
