Блок с меню на странице раздела Начальная школа

--- a/шаблон — страница направления-логопед — начальная-школа.html
+++ b/шаблон — страница направления-логопед — начальная-школа.html
@@ -367,6 +367,43 @@
                     </section>
                 </div>
             </div>
+
+<!--Блок с меню раздела-->
+<div class="uk-margin-large-top uk-margin-large-bottom">
+    <div class="container">
+        <section class="container-item">
+            <h3 class="center title-trend-block" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
+                Занятия по направлениям</h3>
+            <ul class="section-menu nachsk">
+                <li>
+                    <a href="">Русский язык</a>
+                </li>
+                <li>
+                    <a href="">Математика</a>
+                </li>
+                <li>
+                    <a href="">Окружающий мир</a>
+                </li>
+                <li>
+                    <a href="">Литературное чтение</a>
+                </li>
+                <li>
+                    <a href="">Английский язык</a>
+                </li>
+                <li>
+                    <a href="">Французский язык</a>
+                </li>
+                <li>
+                    <a href="">Немецкий язык</a>
+                </li>
+                <li>
+                    <a href="">Испанский язык</a>
+                </li>
+            </ul>
+        </section>
+    </div>
+</div>
+
             <div class="">
                 <div class="container">
 
