Правки по скидке на странице пакетов

--- a/шаблон — личный кабинет — пакеты занятий.html
+++ b/шаблон — личный кабинет — пакеты занятий.html
@@ -125,20 +125,33 @@
             </div>
             <div class="page-lk">
                 <h1 class="uk-text-left uk-margin-top">Пакеты занятий</h1>
+                <div class="packages-text uk-text-center color13">
+                    <p class="textcolor18 ">Скидка -10% в течение суток после проставления статуса "Занятия идут" на
+                        покупку пакета занятий</p>
+                </div>
                 <div class="packages-text">
                     <p>Ученик: Тестовый ученик 1</p>
                     <p>Учитель: Тестовый логопед</p>
                 </div>
+
+
+
                 <div class="uk-margin-large-top">
                     <ul class="uk-grid-match uk-grid-small uk-margin-large-bottom uk-child-width-1-4@xl uk-child-width-1-2@l uk-child-width-1-2@m uk-child-width-1-1@s"
                         uk-sortable="handle: .card-lk" uk-grid>
                         <li>
                             <div class="card-lk activity-packages packag1">
+                                <div class="lable-sale"><span>-10%</span>
+                                </div>
                                 <div class="activity-packages_title">Пробный пакет</div>
+                                <div class="activity-packages_content  sale">
+                                    <p class="activity-packages_content_price"><span>500</span>руб.</p>
+                                </div>
                                 <div class="activity-packages_content">
                                     <p class="activity-packages_content_pricetext">Цена:</p>
                                     <p class="activity-packages_content_price"><span>500</span>руб.</p>
                                 </div>
+
                                 <button type="submit" class="card-lk_button_activity-packages">Купить</button>
 
                             </div>
