Небольшие правки по Ньютонике

--- a/шаблон — анкета.html
+++ b/шаблон — анкета.html
@@ -250,6 +250,7 @@
 
                     <div class="uk-margin">
                         <label class="uk-form-label" for="name">Ваш город (чтобы узнать ваше местное время)</label>
+                        <div class="uk-form-controls">
                         <select class="uk-select" name="city_id" required="">
                             <option>Не выбрано</option>
                             <option disabled=""></option>
@@ -993,6 +994,7 @@
                                 Ярославль
                             </option>
                         </select>
+                    </div>
                     </div>
 
                     <div class="uk-margin">
