Правка размещения модального окна с диагностикой

--- a/шаблон — личный кабинет — мои ученики — педагоги.html
+++ b/шаблон — личный кабинет — мои ученики — педагоги.html
@@ -260,14 +260,14 @@
         </section>
 
     </div>
-    <div id="my-id" class="uk-flex-top diagnosis-successful" uk-modal>
+    <div id="my-id" class="uk-flex-top diagnosis-successful alignment-modal" uk-modal>
         <div class="uk-modal-dialog  uk-margin-auto-vertical uk-modal-dialog modal-trend">
             <button class="uk-modal-close-outside uk-icon uk-close" type="button" uk-close></button>
             <div class="uk-modal-header">
                 <h3>Диагностика успешна</h3>
             </div>
             
-                <form class="form-leave-request">
+                <form class="form-leave-request alignment-modal-form">
                     <div class="">
                         <label class="uk-form-label">Беру в работу</label>
                         <div class="uk-form-controls">
